# pochta

./: main.py  pyproject.toml
data/: Пишу тебе. Корпус для хакатона (2024).xlsx
pochta/: main.py  model.py  test.py
pochta/config/: config.yml
pochta/results/: tree.json  русский_cluster_cores.csv  русский_phrases_with_clusters.csv
