[project]
name = "pochta"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad",email = "burovin123@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flagembedding (>=1.3.5,<2.0.0)",
    "umap (>=0.1.1,<0.2.0)",
    "hdbscan (>=0.8.40,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
